--- a/css/main.css
+++ b/css/main.css
@@ -784,6 +784,18 @@ img {
   }
 }
 
+@media screen and (max-width: 335px) {
+  .hosting__item:not(:last-child) {
+    margin-right: 3px;
+  }
+  .hosting__list {
+    max-width: 230px;
+  }
+  .hosting__btn {
+    font-size: 9px;
+  }
+}
+
 .cloud {
   padding-bottom: 45px;
 }
