--- a/scss/blocks/cloud.scss
+++ b/scss/blocks/cloud.scss
@@ -65,3 +65,9 @@
         line-height: 45px;
     }
 }
+
+@media screen and (max-width:440px){
+    .cloud__list{
+        justify-content: center !important;
+    }
+}
