--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,8 @@
 @import "variables";
 @import "mixins";
 @import "normalize";
+@import "flexboxgrid";
 @import "fonts";
 @import "general";
 @import "blocks/blocks";
-@import "flexboxgrid"
+
