--- a/css/main.css
+++ b/css/main.css
@@ -1558,7 +1558,7 @@ img {
     font-size: 12px;
   }
   .hosting__item:not(:last-child) {
-    margin-right: 10px;
+    margin-right: 0;
   }
   .hosting__list {
     max-width: 230px;
@@ -1879,8 +1879,8 @@ img {
 
 @media screen and (max-width: 576px) {
   .wares__title {
-    font-size: 35px;
-    line-height: 40px;
+    font-size: 26px;
+    line-height: 33px;
   }
   .wares__btn {
     font-size: 25px;
