--- a/scss/blocks/_hosting.scss
+++ b/scss/blocks/_hosting.scss
@@ -153,7 +153,7 @@
         font-size: 12px;
     }
     .hosting__item:not(:last-child){
-        margin-right: 10px;
+        margin-right:0;
     }
     .hosting__list{
         max-width: 230px;
