--- a/css/main.css
+++ b/css/main.css
@@ -1719,7 +1719,7 @@ img {
   margin: 0;
   font-weight: 300;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 23px;
   color: #000;
 }
 
@@ -2248,6 +2248,238 @@ img {
 @media screen and (max-width: 543px) {
   .customers__title::before {
     display: none;
+  }
+}
+
+.web-sites {
+  padding-bottom: 125px;
+}
+
+.web-sites__col:nth-child(1) {
+  padding-left: 0;
+}
+
+.web-sites__col:nth-child(2) {
+  padding-right: 0;
+}
+
+.web-sites__title {
+  margin: 0;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 64px;
+  color: #000;
+  margin-bottom: 8px;
+}
+
+.web-sites__desc {
+  margin: 0;
+  font-size: 18px;
+  line-height: 32px;
+  color: #000;
+}
+
+.web-sites__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.web-sites__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 992px) {
+  .web-sites__title {
+    font-size: 35px;
+    text-align: center;
+    line-height: 45px;
+  }
+  .web-sites__desc {
+    text-align: center;
+    line-height: 25px;
+  }
+  .web-sites__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .web-sites__title {
+    font-size: 29px;
+    line-height: 35px;
+  }
+  .web-sites__desc {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .web-sites__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.awesome {
+  padding-bottom: 110px;
+}
+
+.awesome__box {
+  padding: 80px 90px 90px 118px;
+  background: #f7fafe;
+  border-radius: 16px;
+  background-size: 1272px 392px;
+  background-image: url("/img/awesome-bg.svg");
+  background-repeat: no-repeat;
+  background-size: 1245px 392px;
+}
+
+.make-website__title {
+  max-width: 85%;
+  margin: 0 auto;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 88px;
+  text-align: center;
+  color: #2e2e2e;
+  margin-bottom: 40px;
+}
+
+.make-website__link {
+  margin: 0 auto;
+  max-width: 215px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 14px;
+  line-height: 24px;
+  color: #fff;
+  background: #b00000;
+  border-radius: 8px;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: center;
+  border: 2px solid transparent;
+  -webkit-transition: background 0.4s ease;
+  transition: background 0.4s ease;
+}
+
+.make-website__link::before {
+  content: "";
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background-size: 25px 25px;
+  background-repeat: no-repeat;
+  background-image: url("/img/awesome-phone.svg");
+  margin-right: 10px;
+}
+
+.make-website__link:hover {
+  background: #000;
+}
+
+@media screen and (max-width: 1200px) {
+  .make-website__title {
+    font-size: 50px;
+    line-height: 65px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .make-website__title {
+    font-size: 41px;
+    line-height: 51px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .make-website__title {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  .awesome__box {
+    background-image: none;
+  }
+  .awesome__box {
+    padding: 80px 44px 90px 45px;
+  }
+  .make-website__link {
+    max-width: 200px;
+    font-size: 13px;
+    line-height: 20px;
+    padding: 10px 14px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .make-website__title {
+    font-size: 29px;
+    line-height: 37px;
+  }
+  .make-website__link {
+    max-width: 190px;
+    font-size: 12px;
+    line-height: 20px;
+    padding: 8px 14px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .make-website__title {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .make-website__link {
+    max-width: 170px;
+    font-size: 10px;
+    padding: 7px 14px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .make-website__title {
+    font-size: 15px;
+    line-height: 22px;
+  }
+  .make-website__link {
+    max-width: 140px;
+    font-size: 9px;
+    padding: 4px 10px;
+  }
+  .make-website__link::before {
+    width: 15px;
+    height: 15px;
+    background-size: 15px 15px;
   }
 }
 /*# sourceMappingURL=main.css.map */
